@@ -991,7 +991,7 @@ static void set_surviving_regs(const assignment &a, unsigned short int i, const 
   
   std::set<var_t>::const_iterator v, v_end;
   for (v = G[i].alive.begin(), v_end = G[i].alive.end(); v != v_end; ++v)
-    if(G[i].dying.find(*v) == G[i].dying.end())
+    if(a.global[*v] >= 0 && G[i].dying.find(*v) == G[i].dying.end())
       if(!((IC_RESULT(ic) && !POINTER_SET(ic)) && IS_SYMOP(IC_RESULT(ic)) && OP_SYMBOL_CONST(IC_RESULT(ic))->key == I[*v].v))
         ic->rSurv = bitVectSetBit(ic->rSurv, a.global[*v]);
 }
